syntax = "proto2";

package proto;
option java_outer_classname = "SpaceStationOuter";

option java_multiple_files = true;

message Captain{
  required string name = 1;
  /////////////////////////////enum/////////////////
  enum RaceType{
    FURRY = 0;
    VULCAN = 1;
    KLINGON = 2;
  }
  ///////////////////////enum//////////////////////
  optional RaceType race = 2;
}

message SpaceShip{
  required string name = 1;
  optional int32  crew = 2;
  optional string cargo = 3;
}


message SpaceStation{
  required string designation =1;
  required Captain captain = 2;
  repeated SpaceShip spaceships = 3;

}